commit changes : made it possible to send msg to everyone and only to yourself

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="target"></div>
 
+message: <br>
+<input id="msg" type="text">
+<button id="sendToAll" type="button"> Send To All</button>
+<button id="sendToMe" type="button"> Send To Me </button>
 <script src="/socket.io/socket.io.js"></script>
 <script src="chatroom.js"></script>
 </body>
