commit changes : added user

--- a/client/index.html
+++ b/client/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
 <div id="target"></div>
-
+<div class="chatBox">
 message: <br>
 <input id="msg" type="text">
 <button id="sendToAll" type="button"> Send To All</button>
 <button id="sendToMe" type="button"> Send To Me </button>
+</div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="chatroom.js"></script>
 </body>
